fix bug create accounts, add roles
